# notepad2

./: CMakeLists.txt  readme.md
.github/workflows/: autosync.yml  build.yml
cmake/: mingw.cmake
matepath/src/: matepath.rc
scintilla/: CMakeLists.txt
src/: Dlapi.cpp  Edit.cpp  Helpers.cpp  Notepad4.cpp  Notepad4.h  Notepad4.rc  NppDarkMode.cpp  NppDarkMode.h  config.h
src/DarkMode/: DarkMode.cpp
